[package]
name = "raspberrypi-utils-sys"
version = "0.0.2"
edition = "2024"
description = "Low-level unsafe bindings to raspberrypi-utils"
documentation = "https://docs.rs/raspberrypi-utils-sys"
repository = "https://github.com/lizcore-tech/raspberrypi-utils-rs"
license = "MIT OR BSD-3-Clause"
keywords = ["raspberrypi-utils", "leds", "ws281x", "piolib"]
categories = ["external-ffi-bindings", "hardware-support"]
readme = "../README.md"
authors = ["Marçal Juan Llaó <marcal@lizcore.com>"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1"
cc = "1.2.51"
